--- a/src/main/resources/templates/login/join.mustache
+++ b/src/main/resources/templates/login/join.mustache
@@ -1,39 +1,28 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Join Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f8f9fa;">
-<div class="card shadow-sm" style="width: 300px;">
-    <div class="card-body">
-        <h3 class="card-title text-center mb-4">Join</h3>
-        <form id="joinForm">
-            <div class="mb-3">
-                <label for="userId" class="form-label">UserId</label>
-                <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-                <input type="password" class="form-control mt-2" id="rePassword" placeholder="Enter rePassword" required>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="text" class="form-control" id="email" placeholder="Enter email" autofocus required>
-            </div>
-            <button type="button" class="btn btn-primary w-100" onclick="submitForm()">Join</button>
-        </form>
+{{>layouts/header1}}
+<div class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f8f9fa;">
+    <div class="card shadow-sm" style="width: 300px;">
+        <div class="card-body">
+            <h3 class="card-title text-center mb-4">Join</h3>
+            <form id="joinForm">
+                <div class="mb-3">
+                    <label for="userId" class="form-label">UserId</label>
+                    <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                    <input type="password" class="form-control mt-2" id="rePassword" placeholder="Enter rePassword" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="email" placeholder="Enter email" autofocus required>
+                </div>
+                <button type="button" class="btn btn-primary w-100" onclick="submitForm()">Join</button>
+            </form>
+        </div>
     </div>
 </div>
-
 {{>utility/toast}}
-
-</body>
-</html>
-
 <script>
     function submitForm() {
         const userId = document.getElementById("userId").value.trim();
@@ -81,5 +70,5 @@
             return;
         }
     }
-
 </script>
+{{>layouts/footer1}}
