--- a/src/main/resources/templates/login/login.mustache
+++ b/src/main/resources/templates/login/login.mustache
@@ -1,34 +1,23 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Login Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f8f9fa;">
-<div class="card shadow-sm" style="width: 300px;">
-    <div class="card-body">
-        <h3 class="card-title text-center mb-4">Login</h3>
-        <form id="loginForm">
-            <div class="mb-3">
-                <label for="userId" class="form-label">UserId</label>
-                <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-            </div>
-            <button type="button" class="btn btn-primary w-100" onclick="submitForm()">Login</button>
-        </form>
+{{>layouts/header1}}
+<div class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f8f9fa;">
+    <div class="card shadow-sm" style="width: 300px;">
+        <div class="card-body">
+            <h3 class="card-title text-center mb-4">Login</h3>
+            <form id="loginForm">
+                <div class="mb-3">
+                    <label for="userId" class="form-label">UserId</label>
+                    <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                </div>
+                <button type="button" class="btn btn-primary w-100" onclick="submitForm()">Login</button>
+            </form>
+        </div>
     </div>
 </div>
-
 {{>utility/toast}}
-
-</body>
-</html>
-
 <script>
     const inputUserId = document.getElementById("userId");
     inputUserId.addEventListener('keydown', function(event) {
@@ -104,3 +93,5 @@
                 .catch(error => console.error('Error:', error));
     }
 </script>
+{{>layouts/footer1}}
+
