--- a/src/main/resources/templates/layouts/header1.mustache
+++ b/src/main/resources/templates/layouts/header1.mustache
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8"/>
-    <title>Index Page</title>
+    <title>{{#pageTitle}}{{pageTitle}}{{/pageTitle}}{{^pageTitle}}기본 제목{{/pageTitle}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
