--- a/src/main/resources/templates/login/join.mustache
+++ b/src/main/resources/templates/login/join.mustache
@@ -6,16 +6,16 @@
             <form id="joinForm">
                 <div class="mb-3">
                     <label for="userId" class="form-label">UserId</label>
-                    <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required>
+                    <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required alt="사용자ID" maxlength="30">
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-                    <input type="password" class="form-control mt-2" id="rePassword" placeholder="Enter rePassword" required>
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" required alt="비밀번호" maxlength="30">
+                    <input type="password" class="form-control mt-2" id="rePassword" placeholder="Enter rePassword" required alt="비밀번호 확인" maxlength="30">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email" placeholder="Enter email" autofocus required>
+                    <input type="text" class="form-control" id="email" placeholder="Enter email" autofocus required alt="이메일" maxlength="50">
                 </div>
                 <button type="button" class="btn btn-primary w-100" onclick="submitForm()">Join</button>
             </form>
