--- a/src/main/resources/templates/login/join.mustache
+++ b/src/main/resources/templates/login/join.mustache
@@ -6,9 +6,12 @@
             <form id="joinForm">
                 <div class="mb-3">
                     <label for="userId" class="form-label">UserId</label>
-                    <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required alt="사용자ID" minlength="5" maxlength="30">
-                    <div class="invalid-feedback" id="userIdError"></div> <!-- 오류 메시지를 출력할 div -->
-                    <button type="button" class="btn btn-primary mt-2 w-100" onclick="idCheckForm()">Check</button>
+                    <div class="input-group"> <!-- input-group으로 감싸서 한 줄로 배치 -->
+                        <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required alt="사용자ID" minlength="5" maxlength="30">
+                        <button type="button" class="btn btn-primary" onclick="idCheckForm()">Check</button>
+                        <div class="invalid-feedback" id="userIdError"></div> <!-- 오류 메시지를 출력할 div -->
+                    </div>
+
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
