--- a/src/main/resources/templates/layouts/header1.mustache
+++ b/src/main/resources/templates/layouts/header1.mustache
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <title>{{#pageTitle}}{{pageTitle}}{{/pageTitle}}{{^pageTitle}}기본 제목{{/pageTitle}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" rel="stylesheet"  crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
     <!-- 제이쿼리 -->
